tests/valid/Embedded_Functions/subStr_Function.vyp
void main(void) {
    string str;
    str = "Hello World!";
    print(subStr(str, 6, 5), "\n");
}
