tests/invalid/test1.vyp
void main(void) {
    int 123a;  // Invalid identifier starting with a digit
    print("Invalid identifier\n");
}
